--- a/Contacto.html
+++ b/Contacto.html
@@ -69,17 +69,16 @@
         <img src="IMG/PETCARE_LOGO_M.png" alt="logo veterinaria" class="logo-img">
     </header>
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Contacto.html">Contacto</a>
         <a href="Servicios.html">Servicios</a>
-        <a href="Equipo Médico.html">Equipo Médico</a>
+        <a href="Equipo Médico.html">Equipo</a>
         <a href="Testimonios.html">Testimonios</a>
     </nav>
     <div class="container">
           <main>
         <section class="contact-form">
-            <h2>Formulario de Contacto</h2>
-             <p><strong>SI DESEAS HACER PARTE DE NUESTRO EQUIPO DE TRABAJO, LLENA EL FORMULARIO Y ADJUNTA TU HOJA DE VIDA</strong></p>
+             <h2><strong>SI DESEAS HACER PARTE DE NUESTRO EQUIPO DE TRABAJO, LLENA EL FORMULARIO Y ADJUNTA TU HOJA DE VIDA</strong></h2>
             <p>Puedes enviarlo en formato WORD o PDF únicamente</p>
             <form>
                 <label for="name">Nombre*</label>
