--- a/Servicios.html
+++ b/Servicios.html
@@ -12,9 +12,9 @@
             margin: 0;
             padding: 0;
         }
-        header, footer {
+        header {
             background: #fff;
-            color: #000;
+            color: #0000;
             text-align: center;
             padding: 1em 0;
         }
@@ -33,9 +33,10 @@
             padding: 1em 2em;
         }
         .section-title {
-            color: #fff;
+            color: #333;
             margin: 1em 0;
-            font-size: 1.5em;
+            text-align: center;
+            font-size: 60px;
         }
     </style>
 </head>
@@ -44,10 +45,10 @@
         <img src="IMG/PETCARE_LOGO_M.png" alt="logo veterinaria" class="logo-img">
     </header>
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Contacto.html">Contacto</a>
         <a href="Servicios.html">Servicios</a>
-        <a href="Equipo Médico.html">Equipo Médico</a>
+        <a href="Equipo Médico.html">Equipo</a>
         <a href="Testimonios.html">Testimonios</a>
     </nav>
     <br><br>
