--- a/Equipo Médico.html
+++ b/Equipo Médico.html
@@ -35,12 +35,11 @@
             color: #333;
             margin: 1em 0;
             font-size: 1.5em;
+            text-align: center;
         }
-    
-            img{
+        img{
                 width: 200px;
-                border-radius: 70%;
-                margin-bottom: 20px;
+                border: 70%
             }
     </style>
 </head>
@@ -49,41 +48,36 @@
         <img src="IMG/PETCARE_LOGO_M.png" alt="logo veterinaria" class="logo-img">
     </header>
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Contacto.html">Contacto</a>
         <a href="Servicios.html">Servicios</a>
-        <a href="Equipo Médico.html">Equipo Médico</a>
+        <a href="Equipo Médico.html">Equipo</a>
         <a href="Testimonios.html">Testimonios</a>
     </nav>
     <div class="container">
         <section id="equipo-medico">
-            <h2 class="section-title">Equipo Médico</h2>
+            <h2 class="section-title">Equipo Veterinario</h2>
             <ul>
                 <img src="IMG/Alejandro.jpg" alt="logo veterinaria" class="vet-img">
-                <li>Dr. Alejandro Gómez - Cirugía ortopédica</li>
+                <li>Dr. Alejandro Gómez - Cirugía ortopédica - 10 años de experiencia.</li>
                 <img src="IMG/Ricardo.jpg" alt="logo veterinaria" class="vet-img">
-                <li>Dr. Ricardo Hernández - Dermatología veterinaria</li>
+                <li>Dr. Ricardo Hernández - Dermatología veterinaria - 5 años de experiencia.</li>
                 <img src="IMG/Isabel.jpg" alt="logo veterinaria" class="vet-img">
-                <li>Dra. Isabel Fernández - Oncología veterinaria</li>
-                <img src="IMG/Silvia.jpg" alt="logo veterinaria" class="vet-img">
-                <li>Dra. Silvia Ruiz - Nutrición veterinaria</li>
+                <li>Dra. Isabel Fernández - Oncología veterinaria - 15 años de experiencia.</li>
             </ul>
         </section>
         <section id="equipo-zootecnia">
             <h2 class="section-title">Equipo Zootecnia</h2>
             <ul>
                 <img src="IMG/Patricia.jpg" alt="logo veterinaria" class="zoo-img">
-                <li>Ing. Patricia Ramírez - Bienestar animal</li>
-                <img src="IMG/javier.jpg" alt="logo veterinaria" class="zoo-img">
-                <li>Ing. Javier Torres - Manejo de fauna silvestre</li>
+                <li>Ing. Patricia Ramírez - Bienestar animal - 8 años de experiencia.</li>
                 <img src="IMG/Fernando.jpg" alt="logo veterinaria" class="zoo-img">
-                <li>Ing. Fernando López - Genética y mejoramiento animal</li>
+                <li>Ing. Fernando López - Genética y mejoramiento animal - 5 años de experiencia.</li>
                 <img src="IMG/Mariana.jpg" alt="logo veterinaria" class="zoo-img">
-                <li>Ing. Mariana Díaz - Tecnología de alimentos de origen animal</li>
+                <li>Ing. Mariana Díaz - Tecnología de alimentos de origen animal - 10 años de experiencia.</li>
             </ul>
         </section>
     </div>
-    <footer>
         <footer>
             <p>&copy; 2024 Página creada por Mayruth Hidalgo. Todos los derechos reservados.</p>
         </footer>
